nullaway_error_fff585b3-6d4d-413f-8d17-8406fe0dcaf2.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/Environment.java:2305: error: [NullAway] dereferenced expression this.getStaticShadowLayer() is @Nullable
        this.getStaticShadowLayer().render(g);
                                   ^
    (see http://t.uber.com/nullaway )
